3.5/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-storage
          persistentVolumeClaim:
            claimName: todo-app-claim
      containers:
        - name: todo-app
          image: todo-app:latest
          volumeMounts:
            - name: image-storage
              mountPath: /usr/src/app/files
