3.5/todo-app/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: project
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    backendRefs:
    - name: todo-backend-svc
      port: 2348
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-app-svc
      port: 2345
